#
# Robocar City Emulator and Robocar World Championship
# Justine - this is a rapid prototype for development of Robocar City Emulator
# Copyright (C) 2014 Norbert Bátfai, batfai.norbert@inf.unideb.hu
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

SUBDIRS = src
ACLOCAL_AMFLAGS = -I m4
DIST_SUBDIRS = src 

include aminclude.am

EXTRA_DIST = $(DX_CONFIG) doc/html
